<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile_actvity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cunycodes.org.cunyquest.ProfileActvity"
    android:background="@mipmap/gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:text="@string/complete_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="30sp"
            android:fontFamily="monospace"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/user_name"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_marginTop="10sp"
            android:hint="Name" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/school_spinner"
            android:entries="@array/cuny_schools"
            android:popupBackground="@android:color/holo_blue_light"
            android:layout_marginTop="20sp"
            android:background="@color/common_google_signin_btn_text_dark_disabled"
            android:layout_weight="0.13"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/majors"
            android:popupBackground="@android:color/holo_blue_light"
            android:background="@color/common_google_signin_btn_text_dark_disabled"
            android:entries="@array/majors"
            android:layout_weight="0.13"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" />

        <TextView
            android:text="@string/type_student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_marginTop="20sp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="normal|bold" />

        <RadioButton
            android:text="@string/potential"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pot_student"
            android:button="@android:drawable/btn_radio"
            android:layout_marginTop="20sp"
            android:onClick="onRadioButtonClicked"
            android:textColor="@color/colorPrimary"
            android:checked="false" />

        <RadioButton
            android:text="@string/student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/curStudent"
            android:onClick="onRadioButtonClicked"
            android:button="@android:drawable/btn_radio"
            android:layout_marginTop="20sp"
            android:textColor="@color/colorPrimary" />

        <Button
            android:text="@string/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/set_profile"
            android:layout_marginTop="20sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp"
            android:background="@null"
            android:textColor="@android:color/holo_orange_dark"
            android:textStyle="normal|bold"
            android:layout_marginBottom="20sp" />

    </LinearLayout>


</RelativeLayout>
