<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reset_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cunycodes.org.cunyquest.ResetPassword"
    android:background="@mipmap/gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:text="@string/reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="0.06"
            android:textSize="30sp"
            android:fontFamily="monospace"
            android:textColor="@android:color/holo_blue_bright"
            android:textAlignment="center"
            android:layout_marginBottom="30sp"
            android:layout_marginTop="10sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textEmailAddress"
            android:id="@+id/forgot_email"
            android:hint="Email"
            android:layout_weight="0.06"
            android:layout_marginTop="50sp" />

        <Button
            android:text="@string/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset_password"
            android:layout_weight="0"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="50sp"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp" />

        <Button
            android:text="@string/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signInText"
            android:layout_weight="0.06"
            android:background="@null"
            android:textSize="12sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="40sp" />
    </LinearLayout>
</RelativeLayout>
