<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cunycodes.org.cunyquest.LoginActivity"
    android:background="@mipmap/gradient">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <TextView
            android:text="CUNYQuest "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="0.07"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:fontFamily="monospace"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="36sp"
            android:layout_marginBottom="20sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_text"
            android:layout_weight="0.10"
            android:hint="Email"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/colorPrimary"
            android:layout_margin="10sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_text"
            android:layout_weight="0.07"
            android:hint="Password"
            android:textColorHint="@color/colorPrimaryDark"
            android:layout_margin="10sp" />

        <Button
            android:text="@string/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSignIn"
            android:layout_weight="0.07"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="40sp"
            android:layout_marginBottom="10sp"
            android:background="@android:color/holo_blue_dark" />

        <TextView
            android:text="@string/oR"
            android:layout_height="wrap_content"
            android:id="@+id/oR"
            android:layout_margin="10sp"
            android:textAlignment="center"
            android:layout_width="match_parent" />

        <Button
            android:text="@string/buttonCreateAccount"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCreateAccount"
            android:layout_weight="0"
            android:layout_marginLeft="100sp"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="10sp" />

        <Button
            android:text="@string/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_password"
            android:layout_weight="0.07"
            android:background="@null"
            android:layout_marginTop="40sp"
            android:textSize="10sp"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</RelativeLayout>
