<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_feed_activvity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cunycodes.org.cunyquest.FeedActivity"
    android:background="@mipmap/gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="96dp">

            <ImageView
                android:layout_width="61dp"
                android:layout_height="68dp"
                app:srcCompat="@mipmap/unnamed"
                android:id="@+id/imageView" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:id="@+id/users_name"
                    android:layout_height="30sp"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="24sp"
                    android:textStyle="normal|bold" />

                <SearchView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:layout_width="382dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:textColorHint="@color/colorPrimaryDark"
            android:id="@+id/message"
            android:hint="@string/message"
            android:background="?android:attr/textColorHighlightInverse"
            android:layout_marginTop="10sp"
            android:layout_height="68dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <Button
                android:text="@string/update"
                android:layout_height="50dp"
                android:id="@+id/submit_question"
                android:layout_width="78dp"
                android:background="@null"
                android:textColor="@android:color/holo_green_light"
                android:textStyle="normal|bold"
                android:textAlignment="textStart"
                android:layout_weight="1" />

            <Button
                android:text="@string/cancel"
                android:layout_width="78dp"
                android:layout_height="50dp"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:background="@null"
                android:textColor="@android:color/holo_red_dark" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/list_view" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
